samples/_failures_safe/1761176304_2461b7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a6ce3f73.c: In function ‘main’:
./samples/SAFE/__tmp_a6ce3f73.c:160:5: error: expected expression at end of input
  160 |     if (strlen(input_buffer) == 0)
      |     ^~
./samples/SAFE/__tmp_a6ce3f73.c:160:5: error: expected declaration or statement at end of input
